Fixar inom XScoreScraper